--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                   <li><a href="#home">Profesores</a></li>
                   <li><a href="#features">Materias</a></li>
                   <li><a href="#products">Vinculaciones</a></li>
-                  <li><a href="#login">Iniciar Sesión</a></li>
+                  <li><a href="users/sign_in">Iniciar Sesión</a></li>
               </ul>
           </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
@@ -90,6 +90,5 @@
       <p>&copy 2019 Media de Chilaquiles</p>
   </footer>
   </body>
-   
 </html>
 
