--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Departamento de Computación</a>
+              <a class="navbar-brand" href="/">Departamento de Computación</a>
 
           </div>
 
