--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
                   <li><a href="#home">Profesores</a></li>
                   <li><a href="#features">Materias</a></li>
                   <li><a href="#products">Vinculaciones</a></li>
-                  <li><a href="users/sign_in">Iniciar Sesión</a></li>
+                  <li><%= link_to 'Sign In', new_user_session_url %></li>
               </ul>
           </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
@@ -60,7 +60,7 @@
                   <h4>Contacto</h4>
                   <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> Av. Eugenio Garza Sada 2501 Sur Col.
                       Tecnológico C.p. 64849 | Monterrey, Nuevo León, México </li>
-                  <li><i class="fas fa-phone" aria-hidden="true"></i> +52 (81) 8358-200</li>
+                  <li><i class="fas fa-phone" aria-hidden="true"></i> +52 (81) 8358-2000</li>
                   <li><i class="fas fa-envelope" aria-hidden="true"></i> departamento.computacion&#64;tec.mx</li>
               </ul>
           </div>
