--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,13 +1,12 @@
 <div class="container">
-  <%= form_for(resource, html:{ class:"form" }, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <%= form_for(resource, html:{ class:"form", method: :post}, as: resource_name, url: password_path(resource_name)) do |f| %>
     <h2 class="form-heading">¿Olvidaste tu contraseña?</h2>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="form-fields">
-      <%= f.label :correo %><br />
+      <%= f.label :correo %><br/>
       <%= f.email_field :email,  class:"form-control",placeholder: "Correo",autofocus: true, autocomplete: "email" %>
-    
-      <%= f.submit "Mandar instrucciones", class:"btn btn-lg btn-primary btn-block"%>
     </div>
+     <%= f.submit "Mandar instrucciones", class:"btn btn-lg btn-primary btn-block", style: "margin-top: 10px;"%>
      <%= render "devise/shared/links" %>
   <% end %>
 </div>
