Change db type in courses

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -42,8 +42,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.number_field :type %>
+    <%= form.label :course_type %>
+    <%= form.number_field :course_type %>
   </div>
 
   <div class="field">
