--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= course.clu_laboratory %></td>
         <td><%= course.clu_unities %></td>
         <td><%= course.status %></td>
-        <td><%= course.type %></td>
+        <td><%= course.course_type %></td>
         <td><%= course.information %></td>
         <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
