--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,7 +1,9 @@
 body {
 	padding-top: 40px;
-	padding-bottom: 40px;
-	background-color: #f6f6f6;
+}
+
+.container{
+	margin-top: 38px;
 }
 
 .form {
