--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,6 +9,7 @@
  
  html, body {
    height: 100%;
+   padding-bottom: 0px;
    background-color: #fff;
    color: #3e4546;
    font-family: 'Muli', sans-serif;
