--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,11 +1,7 @@
-body {
-	padding-top: 40px;
-}
-
 .container{
-	margin-top: 38px;
+	padding-top: 100px;
+	padding-bottom: 50px;
 }
-
 .form {
 	max-width: 330px;
 	padding: 15px;
