Made the logo bigger

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -89,6 +89,10 @@
      box-shadow: 0 2px rgba(0, 0, 0, 0.5);
  }
  
+   .navbar-brand{
+      height: 56px;
+   }
+
    .navbar-brand:link,
    .navbar-brand:visited {
      font-size: 26px;
