--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <img class="navbar-brand" src="http://admision.itesm.mx/sites/all/themes/admision/images/area-estudio/logo-tec-blanco.png">
+              <a href="/"><img class="navbar-brand" src="http://admision.itesm.mx/sites/all/themes/admision/images/area-estudio/logo-tec-blanco.png"></a>
               <a class="navbar-brand" href="/">Departamento de Computación</a>
           </div>
 
