--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,14 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @document.description %>
-</p>
+  <p>
+    <strong>Description:</strong>
+    <%= @document.description %>
+  </p>
 
-<p>
-  <strong>Url:</strong>
-  <%= @document.url %>
-</p>
+  <p>
+    <strong>Url:</strong>
+    <%= @document.url %>
+  </p>
 
-<%= link_to 'Edit', edit_document_path(@document) %> |
-<%= link_to 'Back', documents_path %>
+  <%= link_to 'Edit', edit_document_path(@document) %> |
+  <%= link_to 'Back', documents_path %>
+</div>
