--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,39 +1,42 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Links</h1>
+  <h1>Links</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Participants</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Type</th>
-      <th>Url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @links.each do |link| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= link.name %></td>
-        <td><%= link.description %></td>
-        <td><%= link.participants %></td>
-        <td><%= link.start_date %></td>
-        <td><%= link.end_date %></td>
-        <td><%= link.type %></td>
-        <td><%= link.url %></td>
-        <td><%= link_to 'Show', link %></td>
-        <td><%= link_to 'Edit', edit_link_path(link) %></td>
-        <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Participants</th>
+        <th>Start date</th>
+        <th>End date</th>
+        <th>Type</th>
+        <th>Url</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @links.each do |link| %>
+        <tr>
+          <td><%= link.name %></td>
+          <td><%= link.description %></td>
+          <td><%= link.participants %></td>
+          <td><%= link.start_date %></td>
+          <td><%= link.end_date %></td>
+          <td><%= link.type %></td>
+          <td><%= link.url %></td>
+          <td><%= link_to 'Show', link %></td>
+          <td><%= link_to 'Edit', edit_link_path(link) %></td>
+          <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Link', new_link_path %>
+  <br>
+
+  <%= link_to 'New Link', new_link_path %>
+
+</div>
