--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,39 +1,41 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @link.name %>
-</p>
+  <p>
+    <strong>Name:</strong>
+    <%= @link.name %>
+  </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @link.description %>
-</p>
+  <p>
+    <strong>Description:</strong>
+    <%= @link.description %>
+  </p>
 
-<p>
-  <strong>Participants:</strong>
-  <%= @link.participants %>
-</p>
+  <p>
+    <strong>Participants:</strong>
+    <%= @link.participants %>
+  </p>
 
-<p>
-  <strong>Start date:</strong>
-  <%= @link.start_date %>
-</p>
+  <p>
+    <strong>Start date:</strong>
+    <%= @link.start_date %>
+  </p>
 
-<p>
-  <strong>End date:</strong>
-  <%= @link.end_date %>
-</p>
+  <p>
+    <strong>End date:</strong>
+    <%= @link.end_date %>
+  </p>
 
-<p>
-  <strong>Type:</strong>
-  <%= @link.type %>
-</p>
+  <p>
+    <strong>Type:</strong>
+    <%= @link.type %>
+  </p>
 
-<p>
-  <strong>Url:</strong>
-  <%= @link.url %>
-</p>
+  <p>
+    <strong>Url:</strong>
+    <%= @link.url %>
+  </p>
 
-<%= link_to 'Edit', edit_link_path(@link) %> |
-<%= link_to 'Back', links_path %>
+  <%= link_to 'Edit', edit_link_path(@link) %> |
+  <%= link_to 'Back', links_path %>
+</div>
