--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -1,52 +1,54 @@
-<%= form_with(model: professor, local: true) do |form| %>
-  <% if professor.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(professor.errors.count, "error") %> prohibited this professor from being saved:</h2>
+<div class="container">
+  <%= form_with(model: professor, local: true) do |form| %>
+    <% if professor.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(professor.errors.count, "error") %> prohibited this professor from being saved:</h2>
 
-      <ul>
-      <% professor.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% professor.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :name %>
+      <%= form.text_field :name %>
+    </div>
+
+    <div class="field">
+      <%= form.label :father_last_name %>
+      <%= form.text_field :father_last_name %>
+    </div>
+
+    <div class="field">
+      <%= form.label :mother_last_name %>
+      <%= form.text_field :mother_last_name %>
+    </div>
+
+    <div class="field">
+      <%= form.label :email %>
+      <%= form.text_field :email %>
+    </div>
+
+    <div class="field">
+      <%= form.label :office %>
+      <%= form.text_field :office %>
+    </div>
+
+    <div class="field">
+      <%= form.label :resume %>
+      <%= form.text_field :resume %>
+    </div>
+
+    <div class="field">
+      <%= form.label :type %>
+      <%= form.number_field :type %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :father_last_name %>
-    <%= form.text_field :father_last_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :mother_last_name %>
-    <%= form.text_field :mother_last_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="field">
-    <%= form.label :office %>
-    <%= form.text_field :office %>
-  </div>
-
-  <div class="field">
-    <%= form.label :resume %>
-    <%= form.text_field :resume %>
-  </div>
-
-  <div class="field">
-    <%= form.label :type %>
-    <%= form.number_field :type %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
