--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,39 +1,41 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Professors</h1>
+  <h1>Professors</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Father last name</th>
-      <th>Mother last name</th>
-      <th>Email</th>
-      <th>Office</th>
-      <th>Resume</th>
-      <th>Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @professors.each do |professor| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= professor.name %></td>
-        <td><%= professor.father_last_name %></td>
-        <td><%= professor.mother_last_name %></td>
-        <td><%= professor.email %></td>
-        <td><%= professor.office %></td>
-        <td><%= professor.resume %></td>
-        <td><%= professor.type %></td>
-        <td><%= link_to 'Show', professor %></td>
-        <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
-        <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Father last name</th>
+        <th>Mother last name</th>
+        <th>Email</th>
+        <th>Office</th>
+        <th>Resume</th>
+        <th>Type</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @professors.each do |professor| %>
+        <tr>
+          <td><%= professor.name %></td>
+          <td><%= professor.father_last_name %></td>
+          <td><%= professor.mother_last_name %></td>
+          <td><%= professor.email %></td>
+          <td><%= professor.office %></td>
+          <td><%= professor.resume %></td>
+          <td><%= professor.type %></td>
+          <td><%= link_to 'Show', professor %></td>
+          <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
+          <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Professor', new_professor_path %>
+  <br>
+
+  <%= link_to 'New Professor', new_professor_path %>
+</div>
