--- a/app/views/professors/new.html.erb
+++ b/app/views/professors/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Professor</h1>
+<div class="container">
+    <h1>New Professor</h1>
 
-<%= render 'form', professor: @professor %>
-
-<%= link_to 'Back', professors_path %>
+    <%= render 'form', professor: @professor %>
+    <%= link_to 'Back', professors_path %>
+</div>
