--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 <p>
   <strong>Password:</strong>
   <%= @user.password %>
@@ -11,3 +11,4 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+</div>
