Simple styles added

--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -44,7 +44,7 @@
 
     <div class="field">
       <%= form.label :type %>
-      <%= form.number_field :type %>
+      <%= form.select :number_field, ['Planta', 'Catedra']%>
     </div>
 
     <div class="actions">
