--- a/app/views/announcements/edit.html.erb
+++ b/app/views/announcements/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Announcement</h1>
+<div class="container">
+    <h1>Editing Announcement</h1>
 
-<%= render 'form', announcement: @announcement %>
+    <%= render 'form', announcement: @announcement %>
 
-<%= link_to 'Show', @announcement %> |
-<%= link_to 'Back', announcements_path %>
+    <%= link_to 'Show', @announcement %> |
+    <%= link_to 'Back', announcements_path %>
+</div>
