--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -1,29 +1,31 @@
-<p id="notice"><%= notice %></p>
+ <div class="container"> 
+  <p id="notice"><%= notice %></p>
 
-<h1>Announcements</h1>
+  <h1>Announcements</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Date</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @announcements.each do |announcement| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= announcement.description %></td>
-        <td><%= announcement.date %></td>
-        <td><%= link_to 'Show', announcement %></td>
-        <td><%= link_to 'Edit', edit_announcement_path(announcement) %></td>
-        <td><%= link_to 'Destroy', announcement, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Description</th>
+        <th>Date</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @announcements.each do |announcement| %>
+        <tr>
+          <td><%= announcement.description %></td>
+          <td><%= announcement.date %></td>
+          <td><%= link_to 'Show', announcement %></td>
+          <td><%= link_to 'Edit', edit_announcement_path(announcement) %></td>
+          <td><%= link_to 'Destroy', announcement, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Announcement', new_announcement_path %>
+  <br>
+
+  <%= link_to 'New Announcement', new_announcement_path %>
+</div>
