--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Announcement</h1>
+<div class="container">    
+    <h1>New Announcement</h1>
 
-<%= render 'form', announcement: @announcement %>
+    <%= render 'form', announcement: @announcement %>
 
-<%= link_to 'Back', announcements_path %>
+    <%= link_to 'Back', announcements_path %>
+</div>
