--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,7 @@
       <tr>
         <td><%= user.password %></td>
         <td><%= user.email %></td>
+        <td><%= user.admin %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,5 +27,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New User', new_user_path %>
+<% if @curr_user.admin%>
+  <%= link_to 'New User', new_user_path %>
+<% end %>
