Add relationships to professor

--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -42,8 +42,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.number_field :type %>
+    <%= form.label :professor_type %>
+    <%= form.number_field :professor_type %>
   </div>
 
   <div class="actions">
