--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,10 @@
                   <li><a href="#home">Profesores</a></li>
                   <li><a href="#features">Materias</a></li>
                   <li><a href="#products">Vinculaciones</a></li>
-                  <li><%= link_to 'Sign In', new_user_session_url %></li>
+                  <li><a href="#products">Documentos</a></li>
+                  <li><a href="#products">Anuncios</a></li>
+                  <li><%= link_to 'Iniciar Sesion', new_user_session_url %></li>
+                  <li><%= link_to 'Cerrar Sesion', destroy_user_session_url %></li>
               </ul>
           </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
