--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -1,4 +1,4 @@
- <div class="container"> 
+ <div class="container">
   <p id="notice"><%= notice %></p>
 
   <h1>Announcements</h1>
@@ -26,6 +26,7 @@
   </table>
 
   <br>
-
-  <%= link_to 'New Announcement', new_announcement_path %>
+  <% if !@curr_user.admin %>
+    <%= link_to 'New Announcement', new_announcement_path %>
+  <% end %>
 </div>
