--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -26,6 +26,7 @@
   </table>
 
   <br>
-
-  <%= link_to 'New Document', new_document_path %>
+  <% if !@curr_user.admin %>
+    <%= link_to 'New Document', new_document_path %>
+  <% end %>
 </div>
