--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,21 +13,21 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :password %>
+      <%= form.label :Contraseña %>
       <%= form.text_field :password %>
     </div>
 
     <div class="field">
-      <%= form.label :role %>
+      <%= form.label :Rol %>
       <%= form.number_field :role %>
     </div>
 
     <div class="field">
-      <%= form.label :email %>
+      <%= form.label :Correo %>
       <%= form.text_field :email %>
     </div>
   <div class="field">
-    <%= form.label :admin %>
+    <%= form.label :Admin %>
     <%= form.check_box :admin %>
   </div>
 
