--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_with(model: professor, local: true) do |form| %>
+  <%= form_with( html:{ class:"form" } ,model: professor, local: true) do |form| %>
     <% if professor.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(professor.errors.count, "error") %> prohibited this professor from being saved:</h2>
@@ -11,44 +11,43 @@
         </ul>
       </div>
     <% end %>
-
     <div class="field">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
+      <%= form.label :Nombre %>
+      <%= form.text_field :name, class:"form-control" , placeholder: "Nombre"  %>
     </div>
 
     <div class="field">
-      <%= form.label :father_last_name %>
-      <%= form.text_field :father_last_name %>
+      <%= form.label :Apellido_Paterno %>
+      <%= form.text_field :father_last_name, class:"form-control" , placeholder: "Apellido Paterno" %>
     </div>
 
     <div class="field">
-      <%= form.label :mother_last_name %>
-      <%= form.text_field :mother_last_name %>
+      <%= form.label :Apellido_Materno %>
+      <%= form.text_field :mother_last_name, class:"form-control" , placeholder: "Apellido Materno" %>
     </div>
 
     <div class="field">
-      <%= form.label :email %>
-      <%= form.text_field :email %>
+      <%= form.label :Correo %>
+      <%= form.text_field :email, class:"form-control" , placeholder: "Correo" %>
     </div>
 
     <div class="field">
-      <%= form.label :office %>
-      <%= form.text_field :office %>
+      <%= form.label :Oficina %>
+      <%= form.text_field :office, class:"form-control" , placeholder: "Oficina" %>
     </div>
 
     <div class="field">
-      <%= form.label :resume %>
-      <%= form.text_field :resume %>
+      <%= form.label :CV %>
+      <%= form.text_field :resume, class:"form-control" , placeholder: "CV" %>
     </div>
 
     <div class="field">
-      <%= form.label :professor_type %>
-      <%= form.select :professor_type, ['Planta', 'Catedra']%>
+      <%= form.label :Tipo_de_Profesor %>
+      <%= form.select :professor_type, ['Planta', 'Catedra'] , class:"form-control"%>
     </div>
 
     <div class="actions">
-      <%= form.submit %>
+      <%= form.submit 'Guardar', :class => 'btn btn-lg btn-primary btn-block' %>
     </div>
   <% end %>
 </div>
