--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h1>Professors</h1>
+  <h1 class="title">Profesores</h1>
 
   <table>
     <thead>
