--- a/app/views/professors/new.html.erb
+++ b/app/views/professors/new.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
-    <h1>New Professor</h1>
-
-    <%= render 'form', professor: @professor %>
-    <%= link_to 'Back', professors_path %>
+<h1 class="title">Nuevo Profesor</h1>
+<%= render 'form', professor: @professor %>
+<%= link_to 'Back', professors_path , class:"btn btn-sm btn-primary"%>
 </div>
