--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-    <h1>Editing User</h1>
+    <h1 class="title">Editar Usuario</h1>
 
     <%= render 'form', user: @user %>
-
-    <%= link_to 'Show', @user %> |
-    <%= link_to 'Back', users_path %>
+    
+    <%= link_to 'Mostrar', @user , :class => 'btn btn-sm btn-primary' %> |
+    <%= link_to 'Regresar', users_path , :class => 'btn btn-sm btn-primary' %>
 </div>
 
