--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<h1 class="title">Usuarios</h1>
 
 <table>
   <thead>
@@ -31,3 +31,4 @@
 <% if @curr_user.admin%>
   <%= link_to 'New User', new_user_path %>
 <% end %>
+</div>
