--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,20 @@
 <div class="container">
-<p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
+<h1 class="title">Usuario</h1>
+    <p>
+      <strong>Password:</strong>
+      <%= @user.password %>
+    </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+    <p>
+      <strong>Email:</strong>
+      <%= @user.email %>
+    </p>
 
-<p>
-  <strong>Admin:</strong>
-  <%= @user.admin %>
-</p>
+    <p>
+      <strong>Admin:</strong>
+      <%= @user.admin %>
+    </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+    <%= link_to 'Edit', edit_user_path(@user) %> |
+    <%= link_to 'Back', users_path %>
 </div>
