--- a/app/views/professors/new.html.erb
+++ b/app/views/professors/new.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
 <h1 class="title">Nuevo Profesor</h1>
 <%= render 'form', professor: @professor %>
+<p class="text-center">
 <%= link_to 'Back', professors_path , class:"btn btn-sm btn-primary"%>
+</p>
 </div>
