--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -22,6 +22,11 @@
  .title{
   color:#3e4546;
   margin-top: 100px;
+  font-family: 'Muli', sans-serif;
+ }
+
+ .container{
+    min-height: 80%;
  }
 
  p {
