--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <%= form_for(resource, html:{ class:"form" },as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <h2  class="form-heading">Registro</h2>
+    <h2  class="form-heading title">Registro</h2>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="form-fields">
       <%= f.label :correo %><br />
