--- a/app/views/professors/edit.html.erb
+++ b/app/views/professors/edit.html.erb
@@ -2,7 +2,9 @@
     <h1 class="title">Editar Profesor</h1>
 
     <%= render 'form', professor: @professor %>
-
-    <%= link_to 'Show', @professor %> |
-    <%= link_to 'Back', professors_path %>
+    
+    <p class="text-center">
+    <%= link_to 'Mostrar', @professor , :class => 'btn btn-sm btn-primary btn-primary' %> |
+    <%= link_to 'Regresar', professors_path, :class => 'btn btn-sm btn-primary btn-primary' %>
+    </p>
 </div>
