--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <% if current_user.present? %>
-                  <li><a href="./users">Usuarios</a></li>
+                  <li><%= link_to 'Usuarios', users_url %></li>
                 <% end %>
                 <li><%= link_to 'Profesores', professors_url %></li>
                 <li><%= link_to 'Materias', courses_url %></li>
