--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -46,7 +46,7 @@
       <%= form.select :professor_type, ['Planta', 'Catedra'] , class:"form-control"%>
     </div>
 
-    <div class="actions">
+    <div class="actions" style="padding-top:10px;">
       <%= form.submit 'Guardar', :class => 'btn btn-lg btn-primary btn-block' %>
     </div>
   <% end %>
