--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_with(model: user, local: true) do |form| %>
+  <%= form_with(html:{ class:"form" }, model: user, local: true) do |form| %>
     <% if user.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -12,18 +12,18 @@
       </div>
     <% end %>
     <div class="field">
-      <%= form.label :email %>
-      <%= form.text_field :email %>
+      <%= form.label :Correo %>
+      <%= form.text_field :email, class:"form-control" , placeholder: "Correo" %>
     </div>
 
     <div class="field">
       <%= form.label :Contraseña %>
-      <%= form.text_field :password %>
+      <%= form.text_field :password, class:"form-control" , placeholder: "Contraseña" %>
     </div>
 
     <div class="field">
-      <%= form.label :password_confirmation %>
-      <%= form.text_field :password_confirmation %>
+      <%= form.label :Confirmar_Contraseña %>
+      <%= form.text_field :password_confirmation, class:"form-control" , placeholder: "Confirmar Contraseña" %>
     </div>
 
     <% if @curr_user.admin %>
@@ -33,8 +33,8 @@
       </div>
     <% end %>
 
-    <div class="actions">
-      <%= form.submit %>
+    <div class="actions" style="padding-top:10px;">
+      <%= form.submit 'Guardar', :class => 'btn btn-lg btn-primary btn-block' %>
     </div>
 <% end %>
 </div>
