--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,20 @@
 <div class="container">
-    <p>
+  <h1 class="title">Usuario</h1>
+    <p class="text-center">
       <strong>Email:</strong>
       <%= @user.email %>
     </p>
 
-    <p>
+    <p class="text-center">
       <strong>Admin:</strong>
       <%= @user.admin %>
     </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+  <p class="text-center">
+    <%= link_to 'Editar',  edit_user_path(@user), :class => 'btn btn-sm btn-primary'%> |
+    <%= link_to 'Regresar', users_path, :class => 'btn btn-sm btn-primary' %>
+  </p>
 </div>
+
+
+
