Estilos en inputs de cursos

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
-    <h1>New Course</h1>
+    <h1 class='title'>Nuevo Curso</h1>
 
     <%= render 'form', course: @course %>
-
-    <%= link_to 'Back', courses_path %>
+    <p class="text-center">
+        <%= link_to 'Back', courses_path , class:"btn btn-sm btn-primary"%>
+    </p>
 </div>
