--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
-    <h1>Editing Course</h1>
+    <h1 class="title">Editar Curso</h1>
 
     <%= render 'form', course: @course %>
 
-    <%= link_to 'Show', @course %> |
-    <%= link_to 'Back', courses_path %>
+    <p class="text-center">
+    <%= link_to 'Mostrar', @course , :class => 'btn btn-sm btn-primary btn-primary' %> |
+    <%= link_to 'Regresar', courses_path, :class => 'btn btn-sm btn-primary btn-primary' %>
+    </p>
 </div>
+
+
