Estilos en los proyectos

--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
-    <h1>New Link</h1>
+    <h1 class="title">Nuevo Proyecto</h1>
 
     <%= render 'form', link: @link %>
 
-    <%= link_to 'Back', links_path %>
+    <p class="text-center">
+        <%= link_to 'Back', links_path , class:"btn btn-sm btn-primary"%>
+    </p>
 </div>
+
