--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -11,42 +11,42 @@
         </ul>
       </div>
     <% end %>
-  <div class="field">
+  <div class="form-group">
     <%= form.label :Nombre %>
     <%= form.text_field :name, class:"form-control" , placeholder: "Nombre" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :Clave %>
     <%= form.text_field :code, class:"form-control" , placeholder: "Clave" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :CLU_del_curso %>
     <%= form.number_field :clu_course, class:"form-control" , placeholder: "CLU del Curso" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :CLU_del_laboratorio %>
     <%= form.number_field :clu_laboratory, class:"form-control" , placeholder: "CLU del Laboratorio" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :CLU_de_Unidades %>
     <%= form.number_field :clu_unities, class:"form-control" , placeholder: "CLU del Unidades" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :Activo_este_Semestre %>
     <%= form.check_box :status, class:"form-check-input" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :Tipo_de_Curso %>
     <%= form.select :course_type, ['Linea', 'Presencial'] , class:"form-control"%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :Información %>
     <%= form.text_field :information, class:"form-control", placeholder: "Información" %>
   </div>
