--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
-    <h1>Editing Link</h1>
+    <h1 class="title">Editar Proyecto</h1>
 
     <%= render 'form', link: @link %>
 
-    <%= link_to 'Show', @link %> |
-    <%= link_to 'Back', links_path %>
+    <p class="text-center">
+        <%= link_to 'Mostrar', @link , :class => 'btn btn-sm btn-primary btn-primary' %> |
+        <%= link_to 'Regresar', links_path, :class => 'btn btn-sm btn-primary btn-primary' %>
+    </p>
 </div>
+
