--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,29 +11,29 @@
         </ul>
       </div>
     <% end %>
-    <div class="field">
+    <div class="form-group">
       <%= form.label :Correo %>
       <%= form.text_field :email, class:"form-control" , placeholder: "Correo" %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
       <%= form.label :Contraseña %>
       <%= form.text_field :password, class:"form-control" , placeholder: "Contraseña" %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
       <%= form.label :Confirmar_Contraseña %>
       <%= form.text_field :password_confirmation, class:"form-control" , placeholder: "Confirmar Contraseña" %>
     </div>
 
     <% if @curr_user.admin %>
-      <div class="field">
+      <div class="form-group">
         <%= form.label :admin %>
         <%= form.check_box :admin %>
       </div>
     <% end %>
 
-    <div class="actions" style="padding-top:10px;">
+    <div class="actions">
       <%= form.submit 'Guardar', :class => 'btn btn-lg btn-primary btn-block' %>
     </div>
 <% end %>
