--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_with(model: announcement, local: true) do |form| %>
+  <%= form_with(html:{ class:"form" } ,model: announcement, local: true) do |form| %>
     <% if announcement.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(announcement.errors.count, "error") %> prohibited this announcement from being saved:</h2>
@@ -12,18 +12,18 @@
       </div>
     <% end %>
 
-    <div class="field">
-      <%= form.label :description %>
-      <%= form.text_field :description %>
+    <div class="form-group">
+      <%= form.label :Descripción %>
+      <%= form.text_field :description, class:"form-control" , placeholder: "Descripción"  %>
     </div>
 
-    <div class="field">
-      <%= form.label :date %>
+    <div class="form-group">
+      <%= form.label :Fecha %>
       <%= form.datetime_select :date %>
     </div>
 
-    <div class="actions">
-      <%= form.submit %>
+    <<div class="actions">
+      <%= form.submit 'Guardar', :class => 'btn btn-lg btn-primary btn-block' %>
     </div>
   <% end %>
 </div>
