--- a/app/views/announcements/edit.html.erb
+++ b/app/views/announcements/edit.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
-    <h1>Editing Announcement</h1>
+    <h1 class="title">Editar Anuncio</h1>
 
     <%= render 'form', announcement: @announcement %>
 
-    <%= link_to 'Show', @announcement %> |
-    <%= link_to 'Back', announcements_path %>
+    <p class="text-center">
+        <%= link_to 'Mostrar', @announcement , :class => 'btn btn-sm btn-primary btn-primary' %> |
+        <%= link_to 'Regresar', announcements_path, :class => 'btn btn-sm btn-primary btn-primary' %>
+    </p>
 </div>
+
