--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -1,7 +1,11 @@
 <div class="container">    
-    <h1>New Announcement</h1>
+    <h1 class="title">Nuevo Anuncio</h1>
 
     <%= render 'form', announcement: @announcement %>
 
-    <%= link_to 'Back', announcements_path %>
+    <p class="text-center">
+        <%= link_to 'Back', announcements_path , class:"btn btn-sm btn-primary"%>
+    </p>
 </div>
+
+
