--- a/app/views/announcements/show.html.erb
+++ b/app/views/announcements/show.html.erb
@@ -1,16 +1,21 @@
 <div class="container">
+  <h1 class="title">Mostrar Anuncio</h1>
   <p id="notice"><%= notice %></p>
 
-  <p>
-    <strong>Description:</strong>
+  <p class="text-center">
+    <strong>Descripción:</strong>
     <%= @announcement.description %>
   </p>
 
-  <p>
-    <strong>Date:</strong>
+  <p class="text-center">
+    <strong>Fecha:</strong>
     <%= @announcement.date %>
   </p>
 
-  <%= link_to 'Edit', edit_announcement_path(@announcement) %> |
-  <%= link_to 'Back', announcements_path %>
+  <p class="text-center">
+      <%= link_to 'Editar', edit_announcement_path(@announcement) , :class => 'btn btn-sm btn-primary'%> |
+      <%= link_to 'Regresar', announcements_path, :class => 'btn btn-sm btn-primary' %>
+  </p>
 </div>
+
+
