--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_with(model: document, local: true) do |form| %>
+  <%= form_with(html:{ class:"form" } , model: document, local: true) do |form| %>
     <% if document.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(document.errors.count, "error") %> prohibited this document from being saved:</h2>
@@ -12,18 +12,18 @@
       </div>
     <% end %>
 
-    <div class="field">
-      <%= form.label :description %>
-      <%= form.text_field :description %>
+    <div class="form-group">
+      <%= form.label :Descripción %>
+      <%= form.text_field :description, class:"form-control" , placeholder: "Descripción"  %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
       <%= form.label :url %>
-      <%= form.text_field :url %>
+      <%= form.text_field :url, class:"form-control" , placeholder: "URL"  %>
     </div>
 
     <div class="actions">
-      <%= form.submit %>
+      <%= form.submit 'Guardar', :class => 'btn btn-lg btn-primary btn-block' %>
     </div>
   <% end %>
 </div>
