--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
-    <h1>New Document</h1>
+    <h1 class="title">Nuevo Documento</h1>
 
     <%= render 'form', document: @document %>
 
-    <%= link_to 'Back', documents_path %>
+    <p class="text-center">
+        <%= link_to 'Back', documents_path , class:"btn btn-sm btn-primary"%>
+    </p>
 </div>
+
