--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,16 +1,21 @@
 <div class="container">
+  <h1 class="title">Mostrar Documento</h1>
   <p id="notice"><%= notice %></p>
 
-  <p>
-    <strong>Description:</strong>
+  <p class="text-center">
+    <strong>Descripción:</strong>
     <%= @document.description %>
   </p>
 
-  <p>
-    <strong>Url:</strong>
+  <p class="text-center">
+    <strong>URL:</strong>
     <%= @document.url %>
   </p>
 
-  <%= link_to 'Edit', edit_document_path(@document) %> |
-  <%= link_to 'Back', documents_path %>
+   <p class="text-center">
+      <%= link_to 'Editar', edit_document_path(@document) , :class => 'btn btn-sm btn-primary'%> |
+      <%= link_to 'Regresar', documents_path, :class => 'btn btn-sm btn-primary' %>
+  </p>
 </div>
+
+
