Cambios en las tablas, traducciones y estilos generales

--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -22,7 +22,7 @@
       <%= form.datetime_select :date %>
     </div>
 
-    <<div class="actions">
+    <div class="actions">
       <%= form.submit 'Guardar', :class => 'btn btn-lg btn-primary btn-block' %>
     </div>
   <% end %>
