--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">    
-    <h1 class="title">Nuevo Anuncio</h1>
+    <h2 class="title">Nuevo Anuncio</h2>
 
     <%= render 'form', announcement: @announcement %>
 
     <p class="text-center">
-        <%= link_to 'Back', announcements_path , class:"btn btn-sm btn-primary"%>
+        <%= link_to 'Regresar', announcements_path , class:"btn btn-sm btn-primary"%>
     </p>
 </div>
 
