--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="title">Editar Proyecto</h1>
+    <h2 class="title">Editar Vinculación</h2>
 
     <%= render 'form', link: @link %>
 
