--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <h1 class="title">Usuario</h1>
+  <h2 class="title">Mostrar Usuario</h2>
     <p class="text-center">
-      <strong>Email:</strong>
+      <strong>Correo:</strong>
       <%= @user.email %>
     </p>
 
     <p class="text-center">
-      <strong>Admin:</strong>
+      <strong>Administrador:</strong>
       <%= @user.admin %>
     </p>
 
