--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,84 +1,40 @@
+<div class="container">
+<h2 class ="title">Materias</h2>
 <p id="notice"><%= notice %></p>
-
-<h2></h2>
-
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset="utf-8" />
-    <title>Cursos</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  </head>
-
-  <body>
-    <div id="wrapper">
-      <!-- Page Content -->
-      <div id="page-content-wrapper">
-        <div class="container-fluid">
-          <div class="row margin-row">
-            <div class="col-lg-8"></div>
-          </div>
-          <div class="row">
-            <h2>Materias</h2>
-            <div class="col-lg-12">
-              <div class="panel panel-default">
-                <div class="panel-body">
-                  <div class="pull-left">
-                    <%= link_to 'New Course', new_course_path %>
-                  </div>
-                  <!-- /Select -->
-                  <!-- Table -->
-
-                  <table class="table table-striped table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Name</th>
-                        <th>Code</th>
-                        <th>Clu course</th>
-                        <th>Clu laboratory</th>
-                        <th>Clu unities</th>
-                        <th>Status</th>
-                        <th>Type</th>
-                        <th>Information</th>
-                        <th colspan="3"></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                    <% @courses.each do |course| %>
-                      <tr>
-                        <td><%= course.name %></td>
-                        <td><%= course.code %></td>
-                        <td><%= course.clu_course %></td>
-                        <td><%= course.clu_laboratory %></td>
-                        <td><%= course.clu_unities %></td>
-                        <td><%= course.status %></td>
-                        <td><%= course.course_type %></td>
-                        <td><%= course.information %></td>
-                        <td><%= link_to 'Show', course %></td>
-                        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-                        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                      </tr>
-                    <% end %>
-                  </tbody>
-                  </table>
-                  <div class="alert alert-warning" role="alert" id="warning_message">
-                    <i class="fas fa-exclamation-triangle"></i> No se han encontrado resultados.</div>
-                </div>
-              </div>
-            </div>
-            <!-- /.col-lg-12 -->
-          </div>
-        </div>
-      </div>
-      <!-- /#page-content-wrapper -->
-    </div>
-    <!-- /#wrapper -->
-    <!-- JAVASCRIPT -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./../../../js/patient-dashboard.js"></script>
-
-  </body>
-
-</html>
+<% if @curr_user.admin%>
+    <%= link_to 'Nueva Materia', new_course_path, class: "btn btn-primary" %>
+  <% end %>
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Clave</th>
+      <th>CLU Materias</th>
+      <th>CLU Laboratorio</th>
+      <th>CLU Unidades</th>
+      <th>Activo Este Semestre</th>
+      <th>Tipo</th>
+      <th>Información</th>
+      <th colspan="3">Acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @courses.each do |course| %>
+      <tr>
+        <td><%= course.name %></td>
+        <td><%= course.code %></td>
+        <td><%= course.clu_course %></td>
+        <td><%= course.clu_laboratory %></td>
+        <td><%= course.clu_unities %></td>
+        <td><%= course.status %></td>
+        <td><%= course.course_type %></td>
+        <td><%= course.information %></td>
+        <td><%= link_to 'Mostrar', course %></td>
+        <td><%= link_to 'Editar', edit_course_path(course) %></td>
+        <td><%= link_to 'Borrar', course, method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+</div>
+             
