--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,82 +1,37 @@
-<p id="notice"><%= notice %></p>
-
-<h2></h2>
-
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset="utf-8" />
-    <title>Vinculaciones</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  </head>
-
-  <body>
-    <div id="wrapper">
-      <!-- Page Content -->
-      <div id="page-content-wrapper">
-        <div class="container-fluid">
-          <div class="row margin-row">
-            <div class="col-lg-8"></div>
-          </div>
-          <div class="row">
-            <h2>Vinculaciones</h2>
-            <div class="col-lg-12">
-              <div class="panel panel-default">
-                <div class="panel-body">
-                  <div class="pull-left">
-                    <%= link_to 'New Link', new_link_path %>
-                  </div>
-                  <!-- /Select -->
-                  <!-- Table -->
-
-                  <table class="table table-striped table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Participants</th>
-                        <th>Start date</th>
-                        <th>End date</th>
-                        <th>Type</th>
-                        <th>Url</th>
-                        <th colspan="3"></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <% @links.each do |link| %>
-                        <tr>
-                          <td><%= link.name %></td>
-                          <td><%= link.description %></td>
-                          <td><%= link.participants %></td>
-                          <td><%= link.start_date %></td>
-                          <td><%= link.end_date %></td>
-                          <td><%= link.type %></td>
-                          <td><%= link.url %></td>
-                          <td><%= link_to 'Show', link %></td>
-                          <td><%= link_to 'Edit', edit_link_path(link) %></td>
-                          <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                        </tr>
-                      <% end %>
-                    </tbody>
-                  </table>
-                  <div class="alert alert-warning" role="alert" id="warning_message">
-                    <i class="fas fa-exclamation-triangle"></i> No se han encontrado resultados.</div>
-                </div>
-              </div>
-            </div>
-            <!-- /.col-lg-12 -->
-          </div>
-        </div>
-      </div>
-      <!-- /#page-content-wrapper -->
-    </div>
-    <!-- /#wrapper -->
-    <!-- JAVASCRIPT -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./../../../js/patient-dashboard.js"></script>
-
-  </body>
-
-</html>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <h2 class ="title">Vinculaciones</h2>
+  <% if @curr_user.admin%>
+    <%= link_to 'Nueva Vinculación', new_link_path, class: "btn btn-primary" %>
+  <% end %>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Descripción</th>
+        <th>Participantes</th>
+        <th>Fecha de Inicio</th>
+        <th>Fecha de Cierre</th>
+        <th>Tipo</th>
+        <th>URL</th>
+        <th colspan="3">Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @links.each do |link| %>
+        <tr>
+          <td><%= link.name %></td>
+          <td><%= link.description %></td>
+          <td><%= link.participants %></td>
+          <td><%= link.start_date %></td>
+          <td><%= link.end_date %></td>
+          <td><%= link.link_type %></td>
+          <td><%= link.url %></td>
+          <td><%= link_to 'Mostrar', link %></td>
+          <td><%= link_to 'Editar', edit_link_path(link) %></td>
+          <td><%= link_to 'Borrar', link, method: :delete, data: { confirm: 'Esta Seguro?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
