--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2 class="title">Mostrar Vinculación</h2>
   <p id="notice"><%= notice %></p>
 
   <p class="text-center">
