--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title">Profesor</h1>
+  <h2 class="title">Mostrar Profesor</h2>
   <p id="notice"><%= notice %></p>
 
   <p class="text-center">
