--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class='title'>Nuevo Curso</h2>
+    <h2 class='title'>Nueva Materia</h2>
 
     <%= render 'form', course: @course %>
     <p class="text-center">
