--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="title">Curso</h2>
+  <h2 class="title">Mostrar Materia</h2>
   <p id="notice"><%= notice %></p>
 
   <p class="text-center">
