--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="title">Editar Curso</h2>
+    <h2 class="title">Editar Materia</h2>
 
     <%= render 'form', course: @course %>
 
