--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,31 +7,43 @@
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>Nombre</th>
-      <th>Clave</th>
-      <th>CLU Materias</th>
-      <th>CLU Laboratorio</th>
-      <th>CLU Unidades</th>
-      <th>Activo Este Semestre</th>
-      <th>Tipo</th>
-      <th>Información</th>
-      <th colspan="3">Acciones</th>
+      <th class="text-center">Nombre</th>
+      <th class="text-center">Clave</th>
+      <th class="text-center">CLU Materias</th>
+      <th class="text-center">CLU Laboratorio</th>
+      <th class="text-center">CLU Unidades</th>
+      <th class="text-center">Activo Este Semestre</th>
+      <th class="text-center">Tipo</th>
+      <th class="text-center">Información</th>
+      <th colspan="3" class="text-center">Acciones</th>
     </tr>
   </thead>
   <tbody>
     <% @courses.each do |course| %>
       <tr>
-        <td><%= course.name %></td>
-        <td><%= course.code %></td>
-        <td><%= course.clu_course %></td>
-        <td><%= course.clu_laboratory %></td>
-        <td><%= course.clu_unities %></td>
-        <td><%= course.status %></td>
-        <td><%= course.course_type %></td>
-        <td><%= course.information %></td>
-        <td><%= link_to 'Mostrar', course %></td>
-        <td><%= link_to 'Editar', edit_course_path(course) %></td>
-        <td><%= link_to 'Borrar', course, method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+        <td class="text-center"><%= course.name %></td>
+        <td class="text-center"><%= course.code %></td>
+        <td class="text-center"><%= course.clu_course %></td>
+        <td class="text-center"><%= course.clu_laboratory %></td>
+        <td class="text-center"><%= course.clu_unities %></td>
+        <td class="text-center"><%= course.status %></td>
+        <td class="text-center"><%= course.course_type %></td>
+        <td class="text-center"><%= course.information %></td>
+        <td class="text-center">
+          <%= link_to course do %>
+            <i class="btn fas fa-eye fa-sm text-primary" aria-hidden="true"></i>
+          <%end%>
+        </td>
+        <td class="text-center">
+          <%= link_to edit_course_path(course) do %>
+            <i class="btn fas fa-edit fa-sm text-primary" aria-hidden="true"></i>
+          <%end%>
+        </td>
+        <td class="text-center">
+          <%= link_to course, method: :delete, data: { confirm: 'Esta Seguro?' } do%>
+            <i class="btn fa fa-trash-alt fa-sm text-danger" aria-hidden="true"></i>
+          <%end%>
+        </td>
       </tr>
     <% end %>
   </tbody>
