--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -7,21 +7,35 @@
   <table class="table table-striped table-bordered">
     <thead>
         <tr>
-        <th>Descripción</th>
-        <th>URL</th>
-        <th colspan="3">Acciones</th>
+        <th class="text-center">Descripción</th>
+        <th class="text-center">URL</th>
+        <th colspan="3" class="text-center">Acciones</th>
       </tr>
     </thead>
     <tbody>
       <% @documents.each do |document| %>
         <tr>
-          <td><%= document.description %></td>
-          <td><%= document.url %></td>
-          <td><%= link_to 'Mostrar', document %></td>
-          <td><%= link_to 'Editar', edit_document_path(document) %></td>
-          <td><%= link_to 'Borrar', document, method: :delete, data: { confirm: 'Esta Seguro?' } %></td>
+          <td class="text-center"><%= document.description %></td>
+          <td class="text-center"><%= document.url %></td>
+          <td class="text-center">
+            <%= link_to document do %>
+              <i class="btn fas fa-eye fa-sm text-primary" aria-hidden="true"></i>
+            <%end%>
+          </td>
+          <td class="text-center">
+            <%= link_to edit_document_path(document) do %>
+              <i class="btn fas fa-edit fa-sm text-primary" aria-hidden="true"></i>
+            <%end%>
+          </td>
+          <td class="text-center">
+            <%= link_to document, method: :delete, data: { confirm: 'Esta Seguro?' } do%>
+              <i class="btn fa fa-trash-alt fa-sm text-danger" aria-hidden="true"></i>
+            <%end%>
+          </td>
         </tr>
       <% end %>
     </tbody>
   </table>
 </div>
+
+
