--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -7,23 +7,35 @@
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
-        <th>Nombre</th>
-        <th>Email</th>
-        <th>Oficina</th>
-        <th>Resumen</th>
-        <th colspan="3">Acciones</th>
+        <th class="text-center">Nombre</th>
+        <th class="text-center">Email</th>
+        <th class="text-center">Oficina</th>
+        <th class="text-center">Resumen</th>
+        <th colspan="3" class="text-center">Acciones</th>
       </tr>
     </thead>
     <tbody>
       <% @professors.each do |professor| %>
         <tr>
-          <td><%= professor.name %> <%= professor.father_last_name %> <%= professor.mother_last_name %></td>
-          <td><%= professor.email %></td>
-          <td><%= professor.office %></td>
-          <td><%= professor.resume %></td>
-          <td><%= link_to 'Mostrar', professor %></td>
-          <td><%= link_to 'Editar', edit_professor_path(professor) %></td>
-          <td><%= link_to 'Borrar', professor, method: :delete, data: { confirm: 'Esta Seguro?' } %></td>
+          <td class="text-center"><%= professor.name %> <%= professor.father_last_name %> <%= professor.mother_last_name %></td>
+          <td class="text-center"><%= professor.email %></td>
+          <td class="text-center"><%= professor.office %></td>
+          <td class="text-center"><%= professor.resume %></td>
+          <td class="text-center">
+            <%= link_to professor do %>
+              <i class="btn fas fa-eye fa-sm text-primary" aria-hidden="true"></i>
+            <%end%>
+          </td>
+          <td class="text-center">
+            <%= link_to edit_professor_path(professor) do %>
+              <i class="btn fas fa-edit fa-sm text-primary" aria-hidden="true"></i>
+            <%end%>
+          </td>
+          <td class="text-center">
+            <%= link_to professor, method: :delete, data: { confirm: 'Esta Seguro?' } do%>
+              <i class="btn fa fa-trash-alt fa-sm text-danger" aria-hidden="true"></i>
+            <%end%>
+          </td>
         </tr>
       <% end %>
     </tbody>
