--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,21 +7,35 @@
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
-        <th>Rol</th>
-        <th>Administrador</th>
-        <th colspan="3">Acciones</th>
+        <th class="text-center">Rol</th>
+        <th class="text-center">Administrador</th>
+        <th colspan="3" class="text-center">Acciones</th>
       </tr>
     </thead>
     <tbody>
       <% @users.each do |user| %>
         <tr>
-          <td><%= user.email %></td>
-          <td><%= user.admin %></td>
-          <td><%= link_to 'Mostrar', user %></td>
-          <td><%= link_to 'Editar', edit_user_path(user) %></td>
-          <td><%= link_to 'Borrar', user, method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+          <td class="text-center"><%= user.email %></td>
+          <td class="text-center"><%= user.admin %></td>
+          <td class="text-center">
+            <%= link_to user do %>
+              <i class="btn fas fa-eye fa-sm text-primary" aria-hidden="true"></i>
+            <%end%>
+          </td>
+          <td class="text-center">
+            <%= link_to edit_user_path(user) do %>
+              <i class="btn fas fa-edit fa-sm text-primary" aria-hidden="true"></i>
+            <%end%>
+          </td>
+          <td class="text-center">
+            <%= link_to user, method: :delete, data: { confirm: 'Esta Seguro?' } do%>
+              <i class="btn fa fa-trash-alt fa-sm text-danger" aria-hidden="true"></i>
+            <%end%>
+          </td>
         </tr>
       <% end %>
     </tbody>
   </table>
 </div>
+
+
