--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -115,170 +115,10 @@
 /*------- TABLES ------------*/
 
 .table {
-    margin-top: 10px;
-  }
-  
-  .table > thead > tr > th {
-    vertical-align: top;
-    vertical-align: middle;
-  }
-  
-  .table > thead > tr > td {
-    vertical-align: middle;
-  }
-  
-  .table > tbody > tr > td {
-    vertical-align: middle;
-  }
-  
-  .table .fa-plus-square-o,
-  .table .fa-minus-square-o {
-    padding-right: 0.5rem;
-  }
-  
-  .table .fa-plus-square-o:hover,
-  .table .fa-minus-square-o:hover {
-    cursor: pointer;
-  }
-  
-  .table input {
-    display: inline-block;
-    width: 80%;
-  }
-  
-  .table .subfamily .fa-plus-square-o,
-  .table .subfamily .fa-minus-square-o {
-    margin-left: 1rem;
-  }
-  
-  .table .subfamily .subfamily .fa-plus-square-o,
-  .table .subfamily .subfamily .fa-minus-square-o {
-    margin-left: 2rem;
-  }
-  
-  .table .subfamily .fa-picture-o {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-  
-  .table .subfamily .accordion-toggle td:nth-of-type(1) {
-    padding-left: 2rem;
-  }
-  
-  .table .subfamily .subfamily .col-md-2:first-of-type,
-  .table .subfamily .subfamily .col-md-3:first-of-type {
-    padding-left: 2rem;
-  }
-  
-  .table .subfamily .subfamily td.subsubfamily:first-of-type {
-    padding-left: 4rem;
-  }
-  
-  .table .subfamily .subsubfamily td.subsubfamily:first-of-type {
-    padding-left: 4rem;
-  }
-  
-  .table .subfamily .table-bordered {
-    border-left: 0 hidden transparent;
-    border-right: 0 hidden transparent;
-    border-bottom: 0 hidden transparent;
-  }
-  
-  .table .subfamily .table-bordered tr > td {
-    border-left: 0 hidden transparent;
-    border-right: 0 hidden transparent;
-  }
-  
-  .table .subfamily .edit td:first-of-type:after {
-    color: #337ab7;
-    content: "\f06a";
-    float: right;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    line-height: 1.3;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .table a[aria-expanded=true] .fa-plus-square-o {
-    display: none;
-  }
-  
-  .table a[aria-expanded=false] .fa-minus-square-o {
-    display: none;
-  }
-  
-  .table .accordion-toggle .fa-level-up {
-    margin-left: 20px;
-    margin-right: 5px;
-  }
-  
-  td.click a {
-    display: inline-block;
-    cursor: pointer;
-    color: #555555;
-    text-decoration: none;
-  }
-  
-  td.click i {
-    color: #337ab7;
-  }
-  
-  .table-bordered .form-group {
-    margin-bottom: 0;
-  }
-  
-  .subfamily td:nth-of-type(even) {
-    background-color: #f4f4f4;
-  }
-  
-  .subfamily .no-bg td:nth-of-type(even) {
-    background-color: #fafafa;
-  }
-  
-  .subfamily .edit td:nth-of-type(even) {
-    background-color: transparent !important;
-  }
-  
-  .hiddenRow table.table-striped {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  
-  .hiddenRow .table-striped > tbody > tr:nth-of-type(even) {
-    background-color: #f9f9f9;
-  }
-  
-  thead {
-    background-color: #F7F7F7;
-  }
-  
-  .subthead {
-    background-color: #F1F1F1;
-    font-weight: normal;
-  }
-  
-  .parent > tbody {
-    display: block;
-    height: 400px;
-    overflow: auto;
-  }
-  
-  .parent > tbody tr {
-    display: table;
-    width: 100%;
-  }
-  
-  .parent > thead {
-    display: table;
-    width: 100%;
-  }
-  textarea {
-    resize: none;
-  }
+  margin-top: 10px;
+}
 
- 
+
 /*------- HEADER ------------*/
  
  header {
@@ -407,7 +247,14 @@
    margin: 10px auto;
  }
  
- @media only screen and (max-width: 767px) {
+
+ @media (max-width: 1100px){
+  .table-hidde{
+    display: none;
+  }
+ }
+
+ @media (max-width: 767px) {
     section { padding: 30px 0; }
    
    .navbar-toggle {
@@ -433,8 +280,7 @@
    }   
  }
  
- 
- @media screen and (max-width: 480px) {
+ @media (max-width: 480px) {
     section { padding: 25px 0; }
    .btn:link,
    .btn:visited {
@@ -457,7 +303,5 @@
    
    h2 {
      margin-top: 40px;
-   }
-   
-     
+   }  
  }
