--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -8,12 +8,12 @@
     <thead>
       <tr>
         <th class="text-center">Nombre</th>
-        <th class="text-center">Descripción</th>
-        <th class="text-center">Participantes</th>
-        <th class="text-center">Fecha de Inicio</th>
-        <th class="text-center">Fecha de Cierre</th>
-        <th class="text-center">Tipo</th>
-        <th class="text-center">URL</th>
+        <th class="text-center table-hidde">Descripción</th>
+        <th class="text-center table-hidde">Participantes</th>
+        <th class="text-center table-hidde">Fecha de Inicio</th>
+        <th class="text-center table-hidde">Fecha de Cierre</th>
+        <th class="text-center table-hidde">Tipo</th>
+        <th class="text-center table-hidde">URL</th>
         <th colspan="3" class="text-center">Acciones</th>
       </tr>
     </thead>
@@ -21,12 +21,12 @@
       <% @links.each do |link| %>
         <tr>
           <td class="text-center"><%= link.name %></td>
-          <td class="text-center"><%= link.description %></td>
-          <td class="text-center"><%= link.participants %></td>
-          <td class="text-center"><%= link.start_date %></td>
-          <td class="text-center"><%= link.end_date %></td>
-          <td class="text-center"><%= link.link_type %></td>
-          <td class="text-center"><%= link.url %></td>
+          <td class="text-center table-hidde"><%= link.description %></td>
+          <td class="text-center table-hidde"><%= link.participants %></td>
+          <td class="text-center table-hidde"><%= link.start_date %></td>
+          <td class="text-center table-hidde"><%= link.end_date %></td>
+          <td class="text-center table-hidde"><%= link.link_type %></td>
+          <td class="text-center table-hidde"><%= link.url %></td>
           <td class="text-center">
             <%= link_to link do %>
               <i class="btn fas fa-eye fa-sm text-primary" aria-hidden="true"></i>
