Change type for link type in Link model

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -29,7 +29,7 @@
 
   <p class="text-center">
     <strong>Tipo de Proyecto:</strong>
-    <%= @link.type %>
+    <%= @link.link_type %>
   </p>
 
   <p class="text-center">
@@ -42,5 +42,3 @@
     <%= link_to 'Regresar', links_path, :class => 'btn btn-sm btn-primary' %>
   </p>
 </div>
-
-
